--- a/frontend/wpf-dotnet/wpf-dotnet/Home.xaml
+++ b/frontend/wpf-dotnet/wpf-dotnet/Home.xaml
@@ -285,6 +285,11 @@
 															<TextBlock Text="Message privé" Foreground="#999999" FontSize="12"/>
 														</StackPanel>
 													</Border>
+                                                    <Border Grid.Column="2" Width="22" Margin="0 0 10 0" Height="22"
+								Background="#4A90E2">
+                                                            <TextBlock Text="{Binding UnreadCount}" Foreground="White"
+               HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="11"/>
+													</Border>
 												</Grid>
 											</DataTemplate>
 										</ItemsControl.ItemTemplate>
